Fix play button being covered by the footer and so blocking clicks/taps on the play button

--- a/akc/css/game.css
+++ b/akc/css/game.css
@@ -64,6 +64,7 @@ body.attract #attract, body.waiting #waiting, body.playing #playing, body.game-o
   width: 100px;
   margin-left: -50px;
   padding: 10px 20px;
+  z-index: 1;
   border: 1px solid #2b308f;
   border-radius: 4px;
   background-color: #3137a3;
